:feat: main.css ported to sass

--- a/sass/main.sass
+++ b/sass/main.sass
@@ -70,11 +70,11 @@
     font-family: 'Roboto'
 
   /* """ Explore button */
-  section .action-button-container
+  .action-button-container
     margin-bottom: 40px
     text-align: center
 
-  section .action-button-container-a
+  .action-button-container-a
     width: 250px
     margin: auto
     display: block
