--- a/css/main.css
+++ b/css/main.css
@@ -99,7 +99,8 @@
     display: block;
     padding: 20px 0 20px 0;
     margin-bottom: 30px;
-    background: linear-gradient(0deg, #9356dc 24% #ff79da 100);
+    background: #9356dc;
+    background: linear-gradient(0deg, #9356dc 24%, #ff79da 100%);
     box-shadow: 5px 5px 15px 5px rgba(0, 0, 0, 0.25);
     border-radius: 40px;
     font-family: "Roboto";
