--- a/sass/main.sass
+++ b/sass/main.sass
@@ -80,7 +80,8 @@
     display: block
     padding: 20px 0 20px 0
     margin-bottom: 30px
-    background: linear-gradient(0deg, rgba(147,86,220,1) 24% rgba(255,121,218,1) 100)
+    background: rgb(147,86,220)
+    background: linear-gradient(0deg, rgba(147,86,220,1) 24%, rgba(255,121,218,1) 100%)
     box-shadow: 5px 5px 15px 5px rgba(0,0,0,0.25)
     border-radius: 40px
     font-family: 'Roboto'
