--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,14 @@
 @media (max-width: 768px) {
+  body {
+    animation: fadeInAnimation ease 3s;
+    animation-iteration-count: 1;
+    animation-fill-mode: forwards; }
+
+  @keyframes fadeInAnimation {
+    0% {
+      opacity: 0; }
+    100% {
+      opacity: 1; } }
   .overall-padding {
     padding: 20px 20px 40px 20px; }
 
