--- a/css/main.css
+++ b/css/main.css
@@ -102,20 +102,20 @@
   .action-button-container {
     margin-bottom: 40px;
     text-align: center; }
-
-  .action-button-container-a {
-    width: 250px;
-    margin: auto;
-    display: block;
-    padding: 20px 0 20px 0;
-    margin-bottom: 30px;
-    background: #9356dc;
-    background: linear-gradient(0deg, #9356dc 24%, #ff79da 100%);
-    box-shadow: 5px 5px 15px 5px rgba(0, 0, 0, 0.25);
-    border-radius: 40px;
-    font-family: "Roboto";
-    font-weight: 700;
-    color: #FFF;
-    cursor: pointer; } }
+    .action-button-container .action-button-container-a {
+      width: 250px;
+      margin: auto;
+      display: block;
+      padding: 20px 0 20px 0;
+      margin-bottom: 30px;
+      background: #9356dc;
+      background: linear-gradient(0deg, #9356dc 24%, #ff79da 100%);
+      box-shadow: 5px 5px 15px 5px rgba(0, 0, 0, 0.25);
+      transition-duration: 0.25s;
+      border-radius: 40px;
+      font-family: "Roboto";
+      font-weight: 700;
+      color: #FFF;
+      cursor: pointer; } }
 
 /*# sourceMappingURL=main.css.map */
