--- a/css/features.css
+++ b/css/features.css
@@ -1,46 +1,36 @@
-@media (max-width: 768px)
-{
+@media (max-width: 768px) {
   /* """ Features """ section item */
-  .features .item
-  {
+  .features .item {
     width: 80%;
     margin: auto;
     padding: 25px 30px 25px 50px;
     background-color: #F6F6F6;
-    box-shadow: 5px 11px 15px 5px rgba(0,0,0,0.09);
+    box-shadow: 5px 11px 15px 5px rgba(0, 0, 0, 0.09);
     border-radius: 25px;
-    font-family: 'Roboto';
-  }
-  .features .item:not(:last-of-type)
-  {
-    margin-bottom: 25px;
-  }
-  /* """ Features """ item circle */
-  .features .item__circle
-  {
-    width: 35px;
-    height: 25px;
-    position:absolute;
-    margin: 15px -60px;
-    padding-top: 10px;
-    border-radius: 35px;
-    background-color: #9356DC;
-    font-family: 'Roboto';
-    font-weight: 600;
-    color: #fff;
-    text-align: center;
-  }
-  /* """ Features """ card title */
-  .item__description
-  {
-    font-size: 18px;
-    font-weight: 600;
-  }
-  /* """ Features """ card title icon */
-  section.features .item p i
-  {
-    color: #7E7E7E;
-    font-weight: 600;
-    margin-right: 20px;
-  }
-}
+    font-family: "Roboto";
+    /* """ Features """ item circle */
+    /* """ Features """ card title */
+    /* """ Features """ card title icon */ }
+    .features .item:not(:last-of-type) {
+      margin-bottom: 25px; }
+    .features .item .item__circle {
+      position: absolute;
+      width: 35px;
+      height: 25px;
+      margin: 10px -60px;
+      padding-top: 10px;
+      border-radius: 35px;
+      background-color: #9356DC;
+      font-family: "Roboto";
+      font-weight: 600;
+      color: #fff;
+      text-align: center; }
+    .features .item .item__description {
+      font-size: 18px;
+      font-weight: 600; }
+    .features .item .item__icon {
+      color: #7E7E7E;
+      font-weight: 600;
+      margin-right: 20px; } }
+
+/*# sourceMappingURL=features.css.map */
