:feat: still implementing sass

--- a/css/header.css
+++ b/css/header.css
@@ -1,82 +1,2 @@
-/*
- *
- * Pages header
- *
- */
-@media (max-width: 768px)
-{
-  /*
-   * Header, header logo
-   */
-  header
-  {
-    width: 100%;
-    text-align: center;
-    position: relative;
-    box-shadow: 5px 16px 15px -10px rgba(0,0,0,0.15);
-  }
-  header .header__img
-  {
-    margin: 20px 0 10px 0;
-    width: 50%;
-  }
-  header .header__back
-  {
-    position: absolute;
-    top: 25px;
-    left: 15px;
-    font-size: 25px;
-  }
-  header .header__back-link { color: #000; }
-  /*
-   * """ Localisation """ section
-   */
-  section.head
-  {
-    padding: 0px 0 20px 0;
-    text-align: center;
-  }
-  section.head .head__title
-  {
-    font-family: 'Roboto';
-    font-weight: 700;
-    color: #222;
-  }
-
-  section.head .menu-card-heart-icon-i {}
-
-  .head-subtitle--p
-  {
-    margin-top: 0;
-    font-weight: 300;
-    font-size: 18px;
-    font-family: Roboto;
-  }
-  section.head .head-location
-  {
-    padding: 15px 0 15px 0;
-    font-family: 'Roboto';
-  }
-  section.head .head-location-i { margin-right: 25px; }
-  /* """ Heading """ explore btn */
-  section.head p:last-of-type
-  {
-    margin: 0;
-    padding: 10px 20px 15px 20px;
-    text-align: center;
-  }
-  /* """ Heading """ explore presentation title text */
-  section.explore-title
-  {
-    font-family: 'Roboto';
-    font-weight: 300;
-    margin: 0;
-  }
-  /* """ Heading explore subtitle */
-  section.explore .head-subtitle-p
-  {
-    color: #555;
-    margin: 15px;
-    font-family: 'Roboto';
-  }
-}
+@media (max-width: 768px){header{width:100%;text-align:center;position:relative;box-shadow:5px 16px 15px -10px rgba(0,0,0,0.15)}header .header__img{margin:20px 0 10px 0;width:50%}header .header__back{position:absolute;top:25px;left:15px;font-size:25px}header .header__back-link{color:#000}section.head{padding:0px 0 20px 0;text-align:center}section.head .head__title{font-family:"Roboto";font-weight:700;color:#222}section.head .head-subtitle--p{margin-top:0;font-weight:300;font-size:18px;font-family:"Roboto"}section.head .head-location{padding:15px 0 15px 0;font-family:"Roboto"}section.head .head-location-i{margin-right:25px}section.head p:last-of-type{margin:0;padding:10px 20px 15px 20px;text-align:center}section.explore-title{font-family:"Roboto";font-weight:300;margin:0}section.explore-title .head-subtitle-p{color:#555;margin:15px;font-family:"Roboto"}}
+/*# sourceMappingURL=header.css.map */
