--- a/sass/features.sass
+++ b/sass/features.sass
@@ -1,13 +1,15 @@
+@import '__variables.scss'
+
 @media (max-width: 768px)
   /* """ Features """ section item */
   .features .item
     width: 80%
     margin: auto
     padding: 25px 30px 25px 50px
-    background-color: #F6F6F6
+    background-color: $bg_light
     box-shadow: 5px 11px 15px 5px rgba(0,0,0,0.09)
     border-radius: 25px
-    font-family: 'Roboto'
+    font-family: $content_font
     &:not(:last-of-type)
       margin-bottom: 25px
     /* """ Features """ item circle */
@@ -18,8 +20,8 @@
       margin: 10px -60px
       padding-top: 10px
       border-radius: 35px
-      background-color: #9356DC
-      font-family: 'Roboto'
+      background-color: $feat_circle_bg
+      font-family: $content_font
       font-weight: 600
       color: #fff
       text-align: center
@@ -29,6 +31,6 @@
       font-weight: 600
     /* """ Features """ card title icon */
     .item__icon
-        color: #7E7E7E
+        color: $feat_item_icon_color
         font-weight: 600
         margin-right: 20px
