--- a/css/restaurants_list.css
+++ b/css/restaurants_list.css
@@ -1,67 +1,2 @@
-@media (max-width: 768px)
-{
-  /*
-  * """ Restaurants """ sections
-  */
-  section.restaurants
-  {
-    background-color: #F6F6F6;
-    padding-top: 30px;
-  }
-  /* """ Restaurants """ card element */
-  section.restaurants .restaurant .card
-  {
-    width: 95%;
-    margin: 0 auto 20px auto;
-  }
-  /** """ Restaurants """ card """ new """ mention */
-  section.restaurants .restaurant .card .new
-  {
-    position: absolute;
-    margin-top: 20px;
-    padding: 5px 8px 5px 8px;
-    right: 60px;
-    background-color: #99E2D0;
-    font-family: Roboto;
-    font-weight: 500;
-    color: #2DA285;
-
-  }
-  section.restaurants .restaurant .card .flex { display: flex; }  /** """ Restaurants cards content is a flex line */
-  section.restaurants .restaurant .card .flex div:first-of-type{ flex: 1; }
-  section.restaurants .restaurant .card .flex div:last-of-type
-  {
-    margin: 25px 25px 0 0;
-    font-size: 20px;
-  }
-  /* """ Restaurants """ cards  images integration */
-  section.restaurants .restaurant .card img
-  {
-    width: 100%;
-    height: 200px;
-    object-fit: cover;
-    border-radius: 25px 25px 0 0;
-  }
-  /** """ Restaurants """ restaurant card title */
-  section.restaurants .restaurant .card h3
-  {
-    font-family: 'Roboto';
-    font-size: 18px;
-    margin-bottom: 0px;
-    font-weight: 700;
-  }
-  /* """ Restaurants """ restaurant fonts */
-  section.restaurants .restaurant h3, section.restaurants .restaurant p
-  {
-    margin-left: 15px;
-    font-family: Roboto;
-  }
-  section.restaurants .restaurant .card p
-  {
-    margin-top: 5px;
-    padding-bottom: 0px;
-    font-family: 'Roboto';
-    font-size: 15px;
-    color: #555;
-  }
-}
+@media (max-width: 768px){section.restaurants{background-color:#F6F6F6;padding-top:30px;font-family:"Roboto"}section.restaurants .restaurant .card{width:95%;margin:0 auto 20px auto}section.restaurants .restaurant .card .new{position:absolute;margin-top:20px;padding:5px 8px 5px 8px;right:60px;background-color:#99E2D0;font-family:"Roboto";font-weight:500;color:#2DA285}section.restaurants .restaurant .card .flex{display:flex}section.restaurants .restaurant .card .flex div:first-of-type{flex:1}section.restaurants .restaurant .card .flex div:last-of-type{margin:25px 25px 0 0;font-size:20px}section.restaurants .restaurant .card img{width:100%;height:200px;object-fit:cover;border-radius:25px 25px 0 0}section.restaurants .restaurant .card h3{font-family:"Roboto";font-size:18px;margin-bottom:0px;font-weight:700}section.restaurants .restaurant .card h3{margin-left:15px;font-family:"Roboto"}section.restaurants .restaurant .card p{margin-left:15px;margin-top:5px;padding-bottom:0px;font-family:"Roboto";font-size:15px;color:#555}}
+/*# sourceMappingURL=restaurants_list.css.map */
