--- a/css/footer.css
+++ b/css/footer.css
@@ -1,31 +1,2 @@
-@media (max-width: 768px)
-{
-  footer
-  {
-    padding: 15px 0 15px 15px;
-    background-color: #353535;
-  }
-  footer .footer-title-h1
-  {
-    color: white;
-    font-family: 'Shrikhand';
-    font-size: 20px;
-    font-style: italic;
-  }
-  footer .footer-links-list-ul
-  {
-    list-style-type: none;
-    padding: 0;
-  }
-  footer .footer-links-list-li
-  {
-    color: #fff;
-   font-family: 'Roboto';
-    margin-bottom: 10px;
-    font-weight: 500;
-  }
-  footer .footer-icon-i
-  {
-    margin-right: 10px;
-  }
-}
+@media (max-width: 768px){footer{padding:15px 0 15px 15px;background-color:#353535}footer .footer-title-h1{color:#fff;font-family:"Shrikhand";font-size:20px;font-style:italic}footer .footer-links-list-ul{list-style-type:none;padding:0}footer .footer-links-list-li{color:#fff;font-family:"Roboto";margin-bottom:10px;font-weight:500}footer .footer-icon-i{margin-right:10px}}
+/*# sourceMappingURL=footer.css.map */
