--- a/sass/__variables.scss
+++ b/sass/__variables.scss
@@ -1,7 +1,11 @@
+$overall_padding: 20px 20px 40px 20px;
+$overall_margin: 10px 20px 20px 20px;
+
+$project_font: 'Shrikhand';
 $content_font: 'Roboto';
 
 $bg_light: #F6F6F6;
 $feat_circle_bg: #9356DC;
 $feat_item_icon_color: #7E7E7E;
 
-$card_shadow: 5px 11px 15px 5px rgba(0,0,0,0.09);
+$cards_shadow: 5px 11px 15px 5px rgba(0,0,0,0.09);
