--- a/sass/header.sass
+++ b/sass/header.sass
@@ -1,40 +1,50 @@
+/*
+ *
+ * Overall header
+ *
+ */
 @import '__variables.scss'
-
 @media (max-width: 768px)
   header
     width: 100%
     text-align: center
     position: relative
     box-shadow: 5px 16px 15px -10px rgba(0,0,0,0.15)
-    .header__img
-      margin: 20px 0 10px 0
-      width: 50%
-    .header__back
-      position: absolute
-      top: 25px
-      left: 15px
-      font-size: 25px
-    .header__back-link
-      color: #000
+    .header
+      &__img
+        margin: 20px 0 10px 0
+        width: 50%
+      &__back
+        position: absolute
+        top: 25px
+        left: 15px
+        font-size: 25px
+      &__back-link
+        color: #000
 
   section.head
     padding: 0px 0 20px 0
     text-align: center
-    .head__title
-      font-family: $content_font
-      font-weight: 700
-      color: #222
-    .head-subtitle--p
-      margin-top: 0
-      font-weight: 300
-      font-size: 18px
-      font-family: $content_font
-    .head-location
-      padding: 15px 0 15px 0
-      font-family: $content_font
-    .head-location-i
-      margin-right: 25px
-    p:last-of-type
+    .head
+      &__title
+        font-family: $content_font
+        font-weight: 700
+        color: #222
+      &-subtitle--p
+        margin-top: 0
+        font-weight: 300
+        font-size: 18px
+        font-family: $content_font
+      &-location
+        padding: 15px 0 15px 0
+        font-family: $content_font
+      &-location-i
+        margin-right: 25px
+
+    p:last-of-type    .head-subtitle-p
+      color: #555
+      margin: 15px
+      font-family: $content-font
       margin: 0
       padding: 10px 20px 15px 20px
       text-align: center
