--- a/sass/restaurants_list.sass
+++ b/sass/restaurants_list.sass
@@ -1,5 +1,9 @@
+/*
+ *
+ * Homepage restaurant list
+ *
+ */
 @import '__variables.scss'
-
 @media (max-width: 768px)
   section.restaurants
     background-color: #F6F6F6
@@ -40,10 +44,7 @@
         font-size: 18px
         margin-bottom: 0px
         font-weight: 700
-      /* """ Restaurants """ restaurant card fonts */
-      h3
         margin-left: 15px
-        font-family: $content_font
       p
         margin-left: 15px
         margin-top: 5px
