:fix: shorter sass syntax for footer.css

--- a/sass/footer.sass
+++ b/sass/footer.sass
@@ -8,18 +8,19 @@
   footer
     padding: 15px 0 15px 15px
     background-color: #353535
-    .footer-title-h1
-      color: white
-      font-family: 'Shrikhand'
-      font-size: 20px
-      font-style: italic
-    .footer-links-list-ul
-      list-style-type: none
-      padding: 0
-    .footer-links-list-li
-      color: #fff
-      font-family: 'Roboto'
-      margin-bottom: 10px
-      font-weight: 500
-    .footer-icon-i
-      margin-right: 10px
+    .footer
+      &-title-h1
+        color: white
+        font-family: 'Shrikhand'
+        font-size: 20px
+        font-style: italic
+      &-links-list-ul
+        list-style-type: none
+        padding: 0
+      &-links-list-li
+        color: #fff
+        font-family: 'Roboto'
+        margin-bottom: 10px
+        font-weight: 500
+      .&-icon-i
+        margin-right: 10px
