:fix: footer.css wrong icon class

--- a/sass/footer.sass
+++ b/sass/footer.sass
@@ -22,5 +22,5 @@
         font-family: 'Roboto'
         margin-bottom: 10px
         font-weight: 500
-      .&-icon-i
+      &-icon-i
         margin-right: 10px
