:refactor: __variables.scss => overall.scss

--- a/sass/header.sass
+++ b/sass/header.sass
@@ -3,7 +3,7 @@
  * Overall header
  *
  */
-@import '__variables.scss'
+@import '__overall.scss'
 @media (max-width: 768px)
   header
     width: 100%
