--- a/sass/restaurants_list.sass
+++ b/sass/restaurants_list.sass
@@ -3,7 +3,7 @@
  * Homepage restaurant list
  *
  */
-@import '__variables.scss'
+@import '__overall.scss'
 @media (max-width: 768px)
   section.restaurants
     background-color: #F6F6F6
