--- a/sass/restaurants_menus.sass
+++ b/sass/restaurants_menus.sass
@@ -3,7 +3,7 @@
  * Overall restaurant menu container
  *
  */
-@import '__variables.scss'
+@import '__overall.scss'
 @media (max-width: 768px)
   section.menu
     width: 100%
