--- a/sass/footer.sass
+++ b/sass/footer.sass
@@ -3,7 +3,7 @@
  * Overall footer
  *
  */
-@import '__variables.scss'
+@import '__overall.scss'
 @media (max-width: 768px)
   footer
     padding: 15px 0 15px 15px
