--- a/sass/main.sass
+++ b/sass/main.sass
@@ -4,6 +4,7 @@
     animation: fadeInAnimation ease 3s
     animation-iteration-count: 1
     animation-fill-mode: forwards
+    overflow-x: hidden
 
   @keyframes fadeInAnimation
     0%
@@ -46,6 +47,9 @@
     margin-right: 0
   .mrg-left-none
     margin-left: 0
+
+  .medium
+    font-weight: 700
 
   a.link-black
     color: black
