--- a/sass/restaurants_menus.sass
+++ b/sass/restaurants_menus.sass
@@ -4,6 +4,25 @@
  *
  */
 @import '__overall.scss'
+
+@keyframes grow
+  from
+    width: 0%
+  to
+    width: 15%
+
+@keyframes spinner
+  from
+    transform: rotate(0deg)
+  to
+    transform: rotate(360deg)
+
+@keyframes spinnerend
+  from
+    transform: rotate(360deg)
+  to
+    transform: rotate(0deg)
+
 @media (max-width: 768px)
   section.menu
     width: 100%
@@ -54,65 +73,43 @@
     .restaurants-cards-margin
       margin-bottom: 5px
 
-    .card-restaurant-container
-      width: 100%
-      &:hover .card-hovered-area
-          width: 10%
-          display: flex
-          flex-shrink: 0
-          align-items: center
-          justify-content: center
-          background-color: #99E2D0
-          border-radius: 0 20px 20px 0
-          box-shadow: 5px 5px 5px 0px rgba(0,0,0,0.10)
+    .menu-item
+      margin: 30px 20px 30px 20px
+      padding: 5px
+      font-family: 'Roboto'
+          width: 10px
+      &__title
+        display: flex
+        flex-direction: column
+        width: 80%
+        padding: 10px
+      &__subtitle
+        margin-top: 10px
+      &__price
+        width: 20%
+        display: flex
+        flex-direction: column
+        justify-content: flex-end
+        text-align: right
+        padding-right: 10px
+        padding-bottom: 10px
+      &__icon
+        width: 0%
+        display: none
+        flex-direction: column
+        justify-content: center
+        background-color: #99E2D0
+        text-align: center
+        margin: -5px
+        border-radius: 0 20px 20px 0
+        i
           color: #fff
-          margin-left: -5%
+          font-size: 25px
 
-
-      &:hover .card--restaurant__price
-          border-radius: 0
-
-      &:hover .card-hovered-area .card-restaurant-check-i
-          font-size: 22px
-
-      .card--restaurant
-        text-overflow: ellipsis
-        overflow: hidden
-        white-space: nowrap
-
-        &-left
-          width: 90%
-
-        &__card-price
-          width: 10%
-          flex-shrink: 0
-          margin-right: 0
-
-        &__title
-          margin: 0 0 5px
-          font-family: $content_font
-          overflow: hidden
-          text-overflow: ellipsis
-          white-space: nowrap
-
-        &__description
-          margin: 0px
-          white-space: nowrap
-          text-overflow: ellipsis
-          font-family: $content_font
-
-        &__price
-          width: 10%
-          text-align: right
-          border-radius: 0 20px 20px 0
-          box-shadow: 5px 5px 5px 0px rgba(0,0,0,0.10)
-
-        &__price:hover
-          border-radius: 0
-          padding-top: 15px
-
-        &__price__text
-          margin: 0
-          padding-top: 25px
-          font-family: $content_font
-          font-weight: 600
+      &:hover .menu-item__price
+        padding-right: 20px
+      &:hover .menu-item__icon
+        display: flex
+        animation: grow 0.3s forwards
+      &:hover .menu-item__icon i
+        animation: spinner 0.5s forwards, spinnerend 0.5s forwards
