:feat: hompage loader animation

--- a/sass/main.sass
+++ b/sass/main.sass
@@ -1,16 +1,9 @@
 @import '__overall.scss'
+@import 'loader.css'
+
 @media (max-width: 768px)
   body
-    animation: fadeInAnimation ease 3s
-    animation-iteration-count: 1
-    animation-fill-mode: forwards
     overflow-x: hidden
-
-  @keyframes fadeInAnimation
-    0%
-      opacity: 0
-    100%
-      opacity: 1
 
   .overall-padding
     padding: $overall_padding
