:feat: heart animation

--- a/sass/main.sass
+++ b/sass/main.sass
@@ -103,3 +103,56 @@
       cursor: pointer
       background: linear-gradient(0deg, rgba(147,86,220,1) 24%, rgba(255,121,218,1) 80%)
       box-shadow: 5px 5px 15px 5px rgba(0,0,0,0.35)
+
+
+  /* Heart icons buttons */
+  @keyframes heartAnimation
+    0%
+      background: linear-gradient(0deg, rgba(147,86,220,1) 24%, rgba(255,121,218,1) 10%)
+      -webkit-background-clip: text
+      -webkit-text-fill-color: transparent
+    10%
+      background: linear-gradient(0deg, rgba(147,86,220,1) 24%, rgba(255,121,218,1) 20%)
+      -webkit-background-clip: text
+      -webkit-text-fill-color: transparent
+    20%
+      background: linear-gradient(0deg, rgba(147,86,220,1) 24%, rgba(255,121,218,1) 30%)
+      -webkit-background-clip: text
+      -webkit-text-fill-color: transparent
+    30%
+      background: linear-gradient(0deg, rgba(147,86,220,1) 24%, rgba(255,121,218,1) 30%)
+      -webkit-background-clip: text
+      -webkit-text-fill-color: transparent
+    40%
+      background: linear-gradient(0deg, rgba(147,86,220,1) 24%, rgba(255,121,218,1) 40%)
+      -webkit-background-clip: text
+      -webkit-text-fill-color: transparent
+    50%
+      background: linear-gradient(0deg, rgba(147,86,220,1) 24%, rgba(255,121,218,1) 50%)
+      -webkit-background-clip: text
+      -webkit-text-fill-color: transparent
+    60%
+      background: linear-gradient(0deg, rgba(147,86,220,1) 24%, rgba(255,121,218,1) 60%)
+      -webkit-background-clip: text
+      -webkit-text-fill-color: transparent
+    70%
+      background: linear-gradient(0deg, rgba(147,86,220,1) 24%, rgba(255,121,218,1) 70%)
+      -webkit-background-clip: text
+      -webkit-text-fill-color: transparent
+    80%
+      background: linear-gradient(0deg, rgba(147,86,220,1) 24%, rgba(255,121,218,1) 80%)
+      -webkit-background-clip: text
+      -webkit-text-fill-color: transparent
+    90%
+      background: linear-gradient(0deg, rgba(147,86,220,1) 24%, rgba(255,121,218,1) 90%)
+      -webkit-background-clip: text
+      -webkit-text-fill-color: transparent
+    100%
+      background: linear-gradient(0deg, rgba(147,86,220,1) 24%, rgba(255,121,218,1) 100%)
+      -webkit-background-clip: text
+      -webkit-text-fill-color: transparent
+
+  .fa-heart:hover
+    font-weight: 700
+    cursor: pointer
+    animation: heartAnimation 0.5s forwards
