--- a/sass/main.sass
+++ b/sass/main.sass
@@ -3,155 +3,120 @@
 body
   overflow-x: hidden
 
-.overall-padding
-  padding: $overall_padding
-.overall-restaurant-pres-margin
-  margin: $overall_margin
+  .overall-padding
+    padding: $overall_padding
+  .overall-restaurant-pres-margin
+    margin: $overall_margin
 
-.d-none
-  display: none
-.d-block
-  display: block
-.d-inline-block
-  display: inline-block
-.d-flex
-  display: flex
+  .mrg-top-none
+    margin-top: 0
 
-.pdg-top-none
-  padding-top: 0
-.pdg-btm-none
-  padding-bottom: 0
-.pdg-soft
-  padding: 5px
-.pdg-medium
-  padding: 15px
-.pdg-high
-  padding: 30px
+  /** Text rules */
+  p
+    font-family: $content_font
 
-.mrg-none
-  margin: none
-.mrg-top-none
-  margin-top: 0
-.mrg-btm-none
-  margin-bottom: 0
-.mrg-right-none
-  margin-right: 0
-.mrg-left-none
-  margin-left: 0
-
-p
-  font-family: $content_font
-
-.medium
-  font-weight: 700
-
-a.link-black
-  color: black
-a.no-decoration
-  text-decoration: none
-
-.bg-light
-  background-color: #EAEAEA
-.bg-light-alt
-  background-color: #F6F6F6
-
-.radius-none
-  border-radius: 0 !important
-.radius-top-left-none
-  border-top-left-radius: 0px      !important
-.radius-top-right-none
-  border-top-right-radius: 0px     !important
-.radius-bottom-left-none
-  border-bottom-left-radius: 0px   !important
-.radius-bottom-right-none
-  border-bottom-right-radius: 0px  !important
-
-.overall-section-titles
-  font-family: 'Roboto'
-  font-weight: 700
-  font-size: 25px
-
-.card
-  background-color: #fff
-  border-radius: 20px
-  box-shadow: $cards_shadow
-
-.card-title
-  margin-bottom: 0
-  font-family: 'Roboto'
-
-/* """ Explore button */
-.action-button-container
-  margin-bottom: 40px
-  text-align: center
-  &-a
-    width: 250px
-    margin: auto
-    display: block
-    padding: 20px 0 20px 0
-    margin-bottom: 30px
-    background: rgb(147,86,220)
-    background: linear-gradient(0deg, rgba(147,86,220,1) 24%, rgba(255,121,218,1) 100%)
-    box-shadow: 5px 5px 15px 5px rgba(0,0,0,0.25)
-    border-radius: 40px
-    font-family: 'Roboto'
+  .text-medium
     font-weight: 700
-    color: #FFF
+
+  a.link-black
+    color: black
+  a.no-decoration
+    text-decoration: none
+
+  /** Backgrounds helpers */
+  .bg-light
+    background-color: #EAEAEA
+  .bg-light-alt
+    background-color: #F6F6F6
+
+  /** Pages sections titles */
+  .overall-section-titles
+    font-family: $content_font
+    font-weight: 700
+    font-size: 25px
+
+  /** Cards general rules **/
+  .card
+    background-color: #fff
+    border-radius: 20px
+    box-shadow: $cards_shadow
+
+  .card-title
+    margin-bottom: 0
+    font-family: $content_font
+
+  /* """ Actions buttons */
+  .action-button-container
+    margin-bottom: 40px
+    text-align: center
+    &-a
+      width: 250px
+      margin: auto
+      display: block
+      padding: 20px 0 20px 0
+      margin-bottom: 30px
+      background: rgb(147,86,220)
+      background: linear-gradient(0deg, rgba(147,86,220,1) 24%, rgba(255,121,218,1) 100%)
+      box-shadow: 5px 5px 15px 5px rgba(0,0,0,0.25)
+      border-radius: 40px
+      font-family: 'Roboto'
+      font-weight: 700
+      color: #FFF
+      cursor: pointer
+    &-a:hover
+      cursor: pointer
+      background: linear-gradient(0deg, rgba(147,86,220,1) 24%, rgba(255,121,218,1) 80%)
+      box-shadow: 5px 5px 15px 5px rgba(0,0,0,0.35)
+
+
+  /* Heart icons buttons */
+  @keyframes heartAnimation
+    0%
+      background: linear-gradient(0deg, rgba(147,86,220,1) 24%, rgba(255,121,218,1) 0%)
+      -webkit-background-clip: text
+      -webkit-text-fill-color: transparent
+    10%
+      background: linear-gradient(0deg, rgba(147,86,220,1) 24%, rgba(255,121,218,1) 10%)
+      -webkit-background-clip: text
+      -webkit-text-fill-color: transparent
+    20%
+      background: linear-gradient(0deg, rgba(147,86,220,1) 24%, rgba(255,121,218,1) 20%)
+      -webkit-background-clip: text
+      -webkit-text-fill-color: transparent
+    30%
+      background: linear-gradient(0deg, rgba(147,86,220,1) 24%, rgba(255,121,218,1) 30%)
+      -webkit-background-clip: text
+      -webkit-text-fill-color: transparent
+    40%
+      background: linear-gradient(0deg, rgba(147,86,220,1) 24%, rgba(255,121,218,1) 40%)
+      -webkit-background-clip: text
+      -webkit-text-fill-color: transparent
+    50%
+      background: linear-gradient(0deg, rgba(147,86,220,1) 24%, rgba(255,121,218,1) 50%)
+      -webkit-background-clip: text
+      -webkit-text-fill-color: transparent
+    60%
+      background: linear-gradient(0deg, rgba(147,86,220,1) 24%, rgba(255,121,218,1) 60%)
+      -webkit-background-clip: text
+      -webkit-text-fill-color: transparent
+    70%
+      background: linear-gradient(0deg, rgba(147,86,220,1) 24%, rgba(255,121,218,1) 70%)
+      -webkit-background-clip: text
+      -webkit-text-fill-color: transparent
+    80%
+      background: linear-gradient(0deg, rgba(147,86,220,1) 24%, rgba(255,121,218,1) 80%)
+      -webkit-background-clip: text
+      -webkit-text-fill-color: transparent
+    90%
+      background: linear-gradient(0deg, rgba(147,86,220,1) 24%, rgba(255,121,218,1) 90%)
+      -webkit-background-clip: text
+      -webkit-text-fill-color: transparent
+    100%
+      background: linear-gradient(0deg, rgba(147,86,220,1) 24%, rgba(255,121,218,1) 100%)
+      -webkit-background-clip: text
+      -webkit-text-fill-color: transparent
+
+  .fa-heart:hover
+    font-weight: 700
     cursor: pointer
-  &-a:hover
-    cursor: pointer
-    background: linear-gradient(0deg, rgba(147,86,220,1) 24%, rgba(255,121,218,1) 80%)
-    box-shadow: 5px 5px 15px 5px rgba(0,0,0,0.35)
-
-
-/* Heart icons buttons */
-@keyframes heartAnimation
-  0%
-    background: linear-gradient(0deg, rgba(147,86,220,1) 24%, rgba(255,121,218,1) 10%)
-    -webkit-background-clip: text
-    -webkit-text-fill-color: transparent
-  10%
-    background: linear-gradient(0deg, rgba(147,86,220,1) 24%, rgba(255,121,218,1) 20%)
-    -webkit-background-clip: text
-    -webkit-text-fill-color: transparent
-  20%
-    background: linear-gradient(0deg, rgba(147,86,220,1) 24%, rgba(255,121,218,1) 30%)
-    -webkit-background-clip: text
-    -webkit-text-fill-color: transparent
-  30%
-    background: linear-gradient(0deg, rgba(147,86,220,1) 24%, rgba(255,121,218,1) 30%)
-    -webkit-background-clip: text
-    -webkit-text-fill-color: transparent
-  40%
-    background: linear-gradient(0deg, rgba(147,86,220,1) 24%, rgba(255,121,218,1) 40%)
-    -webkit-background-clip: text
-    -webkit-text-fill-color: transparent
-  50%
-    background: linear-gradient(0deg, rgba(147,86,220,1) 24%, rgba(255,121,218,1) 50%)
-    -webkit-background-clip: text
-    -webkit-text-fill-color: transparent
-  60%
-    background: linear-gradient(0deg, rgba(147,86,220,1) 24%, rgba(255,121,218,1) 60%)
-    -webkit-background-clip: text
-    -webkit-text-fill-color: transparent
-  70%
-    background: linear-gradient(0deg, rgba(147,86,220,1) 24%, rgba(255,121,218,1) 70%)
-    -webkit-background-clip: text
-    -webkit-text-fill-color: transparent
-  80%
-    background: linear-gradient(0deg, rgba(147,86,220,1) 24%, rgba(255,121,218,1) 80%)
-    -webkit-background-clip: text
-    -webkit-text-fill-color: transparent
-  90%
-    background: linear-gradient(0deg, rgba(147,86,220,1) 24%, rgba(255,121,218,1) 90%)
-    -webkit-background-clip: text
-    -webkit-text-fill-color: transparent
-  100%
-    background: linear-gradient(0deg, rgba(147,86,220,1) 24%, rgba(255,121,218,1) 100%)
-    -webkit-background-clip: text
-    -webkit-text-fill-color: transparent
-
-.fa-heart:hover
-  font-weight: 700
-  cursor: pointer
-  animation: heartAnimation 0.5s forwards
+    animation: heartAnimation 0.5s forwards
