--- a/sass/features.sass
+++ b/sass/features.sass
@@ -1,36 +1,55 @@
+/** """ Features """ section */
+
 @import '__overall.scss'
 
-@media (max-width: 768px)
-  /* """ Features """ section item */
-  .features .item
-    width: 80%
-    margin: auto
-    padding: 25px 30px 25px 50px
-    background-color: $bg_light
-    box-shadow: 5px 11px 15px 5px rgba(0,0,0,0.09)
-    border-radius: 25px
-    font-family: $content_font
-    &:not(:last-of-type)
+/** These rules are shared by mobile, tablets & desktop */
+.features .item
+  width: 25%
+  margin-bottom: 0
+  margin: auto
+  padding: 25px 30px 25px 50px
+  background-color: $bg_light
+  box-shadow: 5px 11px 15px 5px rgba(0,0,0,0.09)
+  border-radius: 25px
+  font-family: $content_font
+
+/* """ Features """ item circle */
+.item__circle
+  position: absolute
+  width: 35px
+  height: 25px
+  margin: 10px -60px
+  padding-top: 10px
+  border-radius: 35px
+  background-color: $feat_circle_bg
+  font-family: $content_font
+  font-weight: 600
+  color: #fff
+  text-align: center
+
+
+/* """ Features """ card title */
+.item__description
+  font-size: 18px
+  font-weight: 600
+/* """ Features """ card title icon */
+.item__icon
+    color: $feat_item_icon_color
+    font-weight: 600
+    margin-right: 20px
+
+/* Targets mobiles */
+@media(max-width: 768px)
+  .features
+    .item
+      width: 80%
+    .item:not(:last-of-type)
       margin-bottom: 25px
-    /* """ Features """ item circle */
-    .item__circle
-      position: absolute
-      width: 35px
-      height: 25px
-      margin: 10px -60px
-      padding-top: 10px
-      border-radius: 35px
-      background-color: $feat_circle_bg
-      font-family: $content_font
-      font-weight: 600
-      color: #fff
-      text-align: center
-    /* """ Features """ card title */
-    .item__description
-      font-size: 18px
-      font-weight: 600
-    /* """ Features """ card title icon */
-    .item__icon
-        color: $feat_item_icon_color
-        font-weight: 600
-        margin-right: 20px
+
+/* Targets tables */
+@media(min-width: 992px)
+  .features
+    display: flex
+    flex-wrap: wrap
+    h2
+      width: 100%
