--- a/css/features.css
+++ b/css/features.css
@@ -1,1 +1,70 @@
-.features .item{width:25%;margin-bottom:0;margin:auto;padding:25px 30px 25px 50px;background-color:#f6f6f6;box-shadow:5px 11px 15px 5px rgba(0,0,0,.09);border-radius:25px;font-family:"Roboto"}.item__circle{position:absolute;width:35px;height:25px;margin:10px -60px;padding-top:10px;border-radius:35px;background-color:#9356dc;font-family:"Roboto";font-weight:600;color:#fff;text-align:center}.item__description{font-size:18px;font-weight:600}.item__icon{color:#7e7e7e;font-weight:600;margin-right:20px}@media(max-width: 768px){.features .item{width:80%}.features .item:not(:last-of-type){margin-bottom:25px}}@media(min-width: 992px){.features{display:flex;flex-wrap:wrap}.features h2{width:100%}}/*# sourceMappingURL=features.css.map */
+/** """ Features """ section */
+/** These rules are shared by mobile, tablets & desktop */
+.features .item {
+  width: 25%;
+  margin-bottom: 0;
+  margin: auto;
+  padding: 25px 30px 25px 50px;
+  background-color: #F6F6F6;
+  box-shadow: 5px 11px 15px 5px rgba(0, 0, 0, 0.09);
+  border-radius: 25px;
+  font-family: "Roboto";
+}
+
+/* """ Features """ item circle */
+.item__circle {
+  position: absolute;
+  width: 35px;
+  height: 25px;
+  margin: 10px -60px;
+  padding-top: 10px;
+  border-radius: 35px;
+  background-color: #9356DC;
+  font-family: "Roboto";
+  font-weight: 600;
+  color: #fff;
+  text-align: center;
+}
+
+/* """ Features """ card title */
+.item__description {
+  font-size: 18px;
+  font-weight: 600;
+}
+
+/* """ Features """ card title icon */
+.item__icon {
+  color: #7E7E7E;
+  font-weight: 600;
+  margin-right: 20px;
+}
+
+/* Targets mobiles */
+@media (max-width: 768px) {
+  .features .item {
+    width: 80%;
+  }
+  .features .item:not(:last-of-type) {
+    margin-bottom: 25px;
+  }
+}
+/* Targets tables */
+@media (min-width: 992px) {
+  .features {
+    display: flex;
+    flex-wrap: wrap;
+  }
+  .features .item {
+    width: 85%;
+    margin-bottom: 30px;
+    text-align: center;
+  }
+  .features .item__description {
+    margin-left: -25px;
+  }
+  .features h2 {
+    width: 100%;
+  }
+}
+
+/*# sourceMappingURL=features.css.map */
