--- a/sass/main.sass
+++ b/sass/main.sass
@@ -11,6 +11,9 @@ body
   .mrg-top-none
     margin-top: 0
 
+  .d-flex
+    display: flex
+
   /** Text rules */
   p
     font-family: $content_font
